package buildrun.roadeye.rest.dto;

public record UserPasswordDto(String password) {
}
