package buildrun.roadeye.rest.dto;

public record UserTokenPushDto(String tokenPush) {
}
