package buildrun.roadeye.rest.dto;

public record UserUpdateDto(String name, String email, String phone, String cpf) {
}
